# launchr

./: 3 prompts.txt  Dockerfile  README.md  app.py  pyproject.toml  sample Personas.txt
src/launchr/: interview.py  llm.py  personas.py  questions.py  summarize.py  utils.py
